--- a/Ejercicios/20260211-T2/Practica 1 Complejos/CMakeLists.txt
+++ b/Ejercicios/20260211-T2/Practica 1 Complejos/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.31)
-project(Práctica_1_Complejos C)
+project(Practica_1_Complejos C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Práctica_1_Complejos main.c
+add_executable(Practica_1_Complejos main.c
         operaciones.c
         operaciones.h)
