--- a/Ejercicios/20260211-T2/Practica 1 Complejos/CMakeLists.txt
+++ b/Ejercicios/20260211-T2/Practica 1 Complejos/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(Practica_1_Complejos main.c
         operaciones.c
-        operaciones.h)
+        operaciones.h
+        circuito.c
+        circuito.h)
